--- a/assets/css/skills/skills.css
+++ b/assets/css/skills/skills.css
@@ -1,3 +1,3 @@
 .skills-container > div:not(:last-child) {
-    margin-bottom: 12px;
+    margin-bottom: 20px;
 }
